# trpg_program

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  test_api.py
backend/: CLAUDE.md  config.py  dependencies.py  main.py
backend/ai/: keeper_engine.py  prompt_builder.py  response_parser.py
backend/ai/providers/: base.py  claude.py  openai_provider.py
backend/api/routes/: character.py  game.py  scenario.py  session.py
backend/character/: models.py  service.py
backend/core/: game_engine.py  state_machine.py  turn_manager.py
backend/rules/: character_calc.py  combat.py  dice.py  sanity.py  skill_check.py
backend/scenario/: loader.py  models.py  plot_guardian.py
frontend/: CLAUDE.md  nuxt.config.ts  package-lock.json  package.json
frontend/assets/styles/: main.css
frontend/components/: ActionInput.vue  CharacterSheet.vue  CluePanel.vue  NarrativePanel.vue
frontend/composables/: useGameSocket.ts
frontend/pages/: index.vue
frontend/pages/session/[id]/: game.vue  setup.vue
frontend/stores/: game.ts
scenarios/: CLAUDE.md
scenarios/the_haunting/: scenario.yaml
tests/: test_character.py  test_dice.py  test_response_parser.py  test_rules.py  test_scenario.py  test_state_machine.py
